// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShareSheetPendingDialog is rendered with status update 1`] = `
<div
  className="css-1uu1nb5"
>
  <div
    className="css-mgujkx"
  >
    <div
      className="css-1hed33k"
      size={30}
    />
    <span
      className="css-18qh9b2"
      color="#6f6f6f"
    >
      Update
    </span>
  </div>
  <div
    className="css-a1glw"
  >
    <div
      className="css-12zzrdt"
    />
    <div
      className="css-1awwm1c"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      Cancel
    </div>
    <div
      className="css-1awwm1c"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="primary"
    >
      Run In Background
    </div>
  </div>
</div>
`;

exports[`ShareSheetPendingDialog is rendered without status update 1`] = `
<div
  className="css-1uu1nb5"
>
  <div
    className="css-mgujkx"
  >
    <div
      className="css-1hed33k"
      size={30}
    />
    <span
      className="css-18qh9b2"
      color="#6f6f6f"
    />
  </div>
  <div
    className="css-a1glw"
  >
    <div
      className="css-12zzrdt"
    />
    <div
      className="css-1awwm1c"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      Cancel
    </div>
    <div
      className="css-1awwm1c"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="primary"
    >
      Run In Background
    </div>
  </div>
</div>
`;
